add basic skeleton to html and javascript

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,10 +29,121 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+
+    <div class="row">
+        <div class="col-sm-2 time-item" >
+          <h4>8:00 AM</h4>
+        </div>
+        <div class="col-8">
+            <textarea class="col-12" id="8am"></textarea>
+        </div>
+        <div class="save col-sm-1">
+            <button type="button" class="btn btn-dark">Save</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 time-item" >
+          <h4>9:00 AM</h4>
+        </div>
+          <div class="col-8">
+            <textarea class="col-12" id="9am"></textarea>
+          </div>
+        <div class="save col-sm-1">
+            <button type="button" class="btn btn-dark">Save</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 time-item" >
+          <h4>10:00 AM</h4>
+        </div>
+            <div class="col-8">
+              <textarea class="col-12" id="10am"></textarea>
+            </div>
+        <div class="save col-sm-1">
+          <button type="button" class="btn btn-dark">Save</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 time-item" >
+          <h4>11:00 AM</h4>
+        </div>
+        <div class="col-8">
+          <textarea class="col-12" id="11am"></textarea>
+        </div>
+        <div class="save col-sm-1">
+          <button type="button" class="btn btn-dark">Save</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 time-item" >
+          <h4>12:00 PM</h4>
+        </div>
+        <div class="col-8">
+          <textarea class="col-12" id="12pm"></textarea>
+        </div>
+        <div class="save col-sm-1">
+          <button type="button" class="btn btn-dark">Save</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 time-item" >
+          <h4>1:00 PM</h4>
+        </div>
+          <div class="col-8">
+            <textarea class="col-12" id="1pm"></textarea>
+          </div>
+        <div class="save col-sm-1">
+          <button type="button" class="btn btn-dark">Save</button>
+        </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-2 time-item" >
+        <h4>2:00 PM</h4>
+      </div>
+        <div class="col-8">
+          <textarea class="col-12" id="2pm"></textarea>
+        </div>
+      <div class="save col-sm-1">
+        <button type="button" class="btn btn-dark">Save</button>
+      </div>
+  </div>
+    <div class="row">
+        <div class="col-sm-2 time-item" >
+          <h4>3:00 PM</h4>
+        </div>
+          <div class="col-8">
+            <textarea class="col-12" id="3pm"></textarea>
+          </div>
+        <div class="save col-sm-1">
+          <button type="button" class="btn btn-dark">Save</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 time-item" >
+          <h4>4:00 PM</h4>
+        </div>
+          <div class="col-8">
+            <textarea class="col-12" id="4pm"></textarea>
+          </div>
+        <div class="save col-sm-1">
+          <button type="button" class="btn btn-dark">Save</button>
+        </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-2 time-item" >
+        <h4>5:00 PM</h4>
+      </div>
+      <div class="col-8">
+        <textarea class="col-12" id="5pm"></textarea>
+      </div>
+      <div class="save col-sm-1">
+        <button type="button" class="btn btn-dark">Save</button>
+      </div>
+  </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
